--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/
 dist
 dist-ssr
 *.local
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore build artifacts
+build/
+dist/
+
+# Ignore any environment-specific files
+.env.local
+.env.development
+.env.production
