--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,14 @@
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.17.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
+    "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
