--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.6.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "uuid": "^9.0.1",
