--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
+    "formik-stepper": "^2.2.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
