--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-data-grid": "^6.17.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
@@ -25,6 +26,7 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "recharts": "^2.10.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
