--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@svgr/cli": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.14",
