--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,16 @@
     "@mui/material": "^5.14.15",
     "@mui/x-charts": "^6.18.3",
     "@mui/x-data-grid": "^6.17.0",
+    "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "formik-stepper": "^2.2.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
