--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^130.0.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.5.2"
   },
   "devDependencies": {
