--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "csv-writer": "^1.6.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "formik-stepper": "^2.2.1",
