--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.0",
     "csv-writer": "^1.6.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.1",
     "formik": "^2.4.5",
     "formik-stepper": "^2.2.1",
     "jwt-decode": "^4.0.0",
@@ -37,7 +38,7 @@
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.11.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.14",
     "@types/uuid": "^9.0.7",
