--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 # API_URL=http://your_production_vm_ip:port # for production
-VITE_API_URL=http://localhost:1337 # for dev
-# VITE_API_URL=https://philanthrify.co.uk # for dev
+# VITE_API_URL=http://localhost:1337 # for dev
+VITE_API_URL=https://philanthrify.co.uk # for dev
