--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "googleapis": "^130.0.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
