--- a/client/package.json
+++ b/client/package.json
@@ -23,21 +23,25 @@
     "dotenv": "^16.4.1",
     "formik": "^2.4.5",
     "formik-stepper": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "recharts": "^2.10.3",
+    "universal-cookie": "^7.0.2",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@svgr/cli": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.14",
