--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "csv-writer": "^1.6.0",
+    "currency-symbol-map": "^5.1.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.1",
     "formik": "^2.4.5",
