--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.1",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
@@ -18,6 +19,7 @@
     "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "cloudinary": "^2.0.3",
     "csv-writer": "^1.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.1",
