--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,10 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "@types/multer-s3": "^3.0.3",
-    "aws-sdk": "^2.1571.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.41.0",
+    "cloudinary": "^1.41.3",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
@@ -30,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.8",
     "prisma": "^5.5.2",
     "vite": "^5.0.12"
