fixed drag and drop; made attempt to centralise project image but no joy

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 # API_URL=http://your_production_vm_ip:port # for production
-# VITE_API_URL=http://localhost:1337 # for dev
-VITE_API_URL=https://philanthrify.co.uk # for prod
+VITE_API_URL=http://localhost:1337 # for dev
+# VITE_API_URL=https://philanthrify.co.uk # for prod
 VITE_CLOUD_NAME = "dl1zphjjk"
